# Eksperimen_SML_Wisnu-anugrah-pratama

./: .gitignore  README.md  pyproject.toml
.github/workflows/: preprocessing.yml
preprocessing/: Eksperimen_Wisnu-anugrah-pratama.ipynb  automate_Wisnu-anugrah-pratama.py
