[project]
name = "eksperimen-sml-wisnu-anugrah-pratama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "numpy>=2.5.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
